panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_function__test_declare_function_in_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_function/test_declare_function_in_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_function/test_declare_function_in_function.c"
   (function-definition external stack-size=24
      (f~0 `fn() -> int` (static f))
      (compound-statement
         (declaration external (g~1 `fn() -> int` (static g)) ∅)
         (declaration external (g~1 `fn() -> int` (static g)) ∅)
         (return (42 `int` @0)))))

----- stderr -----
