panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_function__test_error_lengthof_nonarray.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_function/test_error_lengthof_nonarray.c
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `_Lengthof` can only be applied to arrays, not `fn(∅: int) -> int`
   ╭─[panko/tests/cases/decl_in_function/test_error_lengthof_nonarray.c:2:15]
   │
 2 │     _Lengthof(int(int));
   │     ───────── ────┬───  
   │                   ╰───── this type is `fn(∅: int) -> int`
───╯

Error: `_Lengthof` can only be applied to arrays, not `int`
   ╭─[panko/tests/cases/decl_in_function/test_error_lengthof_nonarray.c:3:22]
   │
 3 │     return _Lengthof 42;
   │            ───────── ─┬  
   │                       ╰── this expression is of type `int`
───╯
